dark mode v2: lower polaroid brightness, fix open nav colors, fix sun/moon icons

--- a/_sass/includes/small.scss
+++ b/_sass/includes/small.scss
@@ -100,7 +100,7 @@
     }
 
     &-inner {
-        background-color: rgba(255, 255, 255, 1);
+        background-color: var(--primary-color);
 
     }
 
@@ -164,7 +164,7 @@
     font-size: 32px;
     text-align: bottom;
     transform: translate(-200%, 175%);
-    color: black;
+    color: var(--font-color);
     transition-timing-function: step-start;
     transition: none !important;
 
