--- a/_sass/root/dark-mode-toggle.scss
+++ b/_sass/root/dark-mode-toggle.scss
@@ -42,10 +42,12 @@
 
 
 
+
 input:checked+.slider {
   background-color: var(--secondary-color);
   background-repeat: no-repeat;
-  background-image: url('../../assets/moon-black.svg');
+  background-image: url("{{ '../../assets/moon-black.svg' | relative_url}}");
+
   background-size: 12px;
   background-position-x: 4px;
   background-position-y: 4px;
@@ -59,7 +61,7 @@ input:checked+.slider:before {
 .slider.round {
   border-radius: 22px;
   background-repeat: no-repeat;
-  background-image: url('../../assets/day-sunny.svg');
+  background-image: url("{{ '../../assets/day-sunny.svg' | relative_url }}");
   background-size: 14px;
   background-position-x: 23px;
   background-position-y: 4px;
