--- a/_sass/root/variables.scss
+++ b/_sass/root/variables.scss
@@ -77,7 +77,7 @@ $layout-header-middle-border: 1px solid var(--font-color);
     }
 
     .photo-item {
-        filter: brightness(0.85) contrast(1.25);
+        filter: brightness(0.75) contrast(1.1);
     }
 
     .image-img {
